Fixing button overlap on donate page per issue #27

--- a/assets/styles/components/_page-headers.scss
+++ b/assets/styles/components/_page-headers.scss
@@ -104,7 +104,7 @@
     }
 
     &.with-cta + * {
-      margin-top: 300px;
+      margin-top: 424px;
     }
   }
 }
